--- a/.gitignore
+++ b/.gitignore
@@ -55,5 +55,8 @@ pids
 # Railway files
 .railway/
 
+# Claude
+.claude
+
 # Diagnostic reports (https://nodejs.org/api/report.html)
 report.[0-9]*.[0-9]*.[0-9]*.[0-9]*.json
