fix:updated project settings

--- a/.env.example
+++ b/.env.example
@@ -1,12 +1,14 @@
 DB_HOST=localhost
-DB_PORT=5432
+DB_PORT=5433
+DB_NAME=gym_api_graphql
 DB_USERNAME=gymuser
 DB_PASSWORD=gympass123
-DB_NAME=gym_api
 
-# JWT
-JWT_SECRET=your-secret-key-change-this
-JWT_EXPIRATION=3600
+# JWT Configuration
+JWT_SECRET=your_super_secret_jwt_key_change_this_in_production
 
-# API
-NODE_ENV=3000
+# Environment
+NODE_ENV=development
+
+# Application
+PORT=9091
