--- a/render.yaml
+++ b/render.yaml
@@ -3,7 +3,7 @@ services:
       name: gym-api-graph
       env: node
       plan: free
-      buildCommand: npm install && npm run build
+      buildCommand: npm install --production=false && npm run build
       startCommand: npm run start:prod
       envVars:
         - key: NODE_ENV
