--- a/render.yaml
+++ b/render.yaml
@@ -3,7 +3,7 @@ services:
       name: gym-api-graph
       env: node
       plan: free
-      buildCommand: npm ci && npx nest build
+      buildCommand: npm ci && npx tsc
       startCommand: node dist/main.js
       envVars:
         - key: NODE_ENV
