fix: use npx for nest build in render_3

--- a/render.yaml
+++ b/render.yaml
@@ -3,7 +3,7 @@ services:
       name: gym-api-graph
       env: node
       plan: free
-      buildCommand: npm ci && npx tsc
+      buildCommand: npm install && npm run build
       startCommand: node dist/main.js
       envVars:
         - key: NODE_ENV
