--- a/render.yaml
+++ b/render.yaml
@@ -3,7 +3,7 @@ services:
       name: gym-api-graph
       env: node
       plan: free
-      buildCommand: npm install && npm run build
+      buildCommand: npm install && npx tsc -p tsconfig.json
       startCommand: node dist/main.js
       envVars:
         - key: NODE_ENV
